[tool.poetry]
name = "perturbations"
version = "0.1.0"
description = "Perturbation techniques"
authors = ["Quincy Cambrel"]

[tool.poetry.dependencies]
python = "~3.8"
streamlit = "~0.79.0"
jax = "~0.2.12"
scipy = "~1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
